[package]
name = "spard_exporter"
authors = ["Emmanuel Surleau <emmanuel.surleau@gmail.com>"]
license = "MIT"
description = "An utility which parses Sparkassen Danmark PDF export files and turns them into CSV files"
repository = "https://github.com/Emm/spard_exporter"
categories = ["command-line-utilities", "finance"]
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
csv = "1.3.1"
pdf-extract = "0.8.2"
regex = "1.11.1"
rust_decimal = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rust_decimal_macros = "1.36.0"
